# nativeqq

./: .gitignore  CMakeLists.txt  library-require.md  main.cpp  used.txt  vcpkg-require.txt
core/: CMakeLists.txt
core/include/inner/: device.h  ecdh.h  protocol.h  userdata.h  wtlogin.h
core/include/inner/wtlogin/: request.h  tlv.h
core/include/inner/wtlogin/request/: wtlogin09.h
core/include/inner/wtlogin/tlv/: tlv_1.h  tlv_100.h  tlv_106.h  tlv_107.h  tlv_109.h  tlv_116.h  tlv_124.h  tlv_128.h  tlv_141.h  tlv_142.h  tlv_144.h  tlv_145.h  tlv_147.h  tlv_154.h  tlv_16e.h  tlv_177.h  tlv_18.h  tlv_187.h  tlv_188.h  tlv_191.h  tlv_511.h  tlv_516.h  tlv_521.h  tlv_525.h  tlv_52d.h  tlv_536.h  tlv_542.h  tlv_544.h  tlv_545.h  tlv_8.h
core/include/net/: client.h  packet.h  waiter.h
core/include/oicq/: oicq.h  protocol.h  verify.h
core/include/oicq/util/: oicq_util.h
core/src/: client.cpp  oicq.cpp
core/src/inner/: wlogin.cpp
core/src/inner/wtlogin/: request.cpp
core/src/net/: client.cpp  waiter.cpp
protocol/: CMakeLists.txt
protocol/include/: tars2cpp.bat
protocol/include/oicq/wlogin_sdk/: HttpServerList.tars
protocol/include/tup/: RequestF.tars
protocol/src/: ignore.cpp
tars/: CMakeLists.txt
tars/include/compat/: byteswap.h  cpuid.h  endian.h
tars/include/crypt/: bytedata.h  common.h  crc32.h  hmac_sha256.h  salsa20.h  sha256.h
tars/include/tup/: Protobuf.h  Tars.h  tup.h
tars/include/util/: tc_autoptr.h  tc_common.h  tc_ex.h  tc_file.h  tc_md5.h  tc_pack.h  tc_platform.h  tc_port.h  tc_tea.h
tars/include/uv/: uv_thread.h
tars/src/:  crc32.cpp  crc32.cpp  hmac_sha256.cpp  salsa20.cpp  sha256.cpp  tc_common.cpp  tc_ex.cpp  tc_file.cpp  tc_md5.cpp  tc_pack.cpp  tc_port.cpp  tc_tea.cpp
tars/src/tup/: Protobuf.cpp
tars/src/uv/: uv_thread.cpp
